# gforce

./: CMakeLists.txt  README.md  THIS-VERSION-FROM.txt  TODO.txt
apps/: gforce.cpp
apps/demo/: .project  blade.cpp  blade2.cpp  collision.cpp  collision2.cpp  ring.cpp  ring2.cpp
apps/qt/: .cproject  .project  AnimatedQuarterWidget.cpp  AnimatedQuarterWidget.h  AnimatedQuarterWidget.i  QuarterApplication.i  QuarterWidget.i  aqw_swigtest.py  gfide.pro  gfide.ui  gfideMainWindow.cpp  gfideMainWindow.h  main.cpp  spammodule.c  spammodule.h
src/: CMakeLists.txt  gfBond.cpp  gfBond.h  gfBondCoinView.cpp  gfBondCoinView.h  gfExtendedObject.cpp  gfExtendedObject.h  gfExtendedObjectCoinView.cpp  gfExtendedObjectCoinView.h  gfMassElement.cpp  gfMassElement.h  gfMassElementCoinView.cpp  gfMassElementCoinView.h  gfQuaternion.cpp  gfQuaternion.h  gfUniverse.cpp  gfUniverse.h  gfUniverseCoinView.cpp  gfUniverseCoinView.h  gfVector.cpp  gfVector.h  gfView.h  gforce.h  gftypes.h  gfvtk.cpp  gfvtk.h  gfvtk2.cpp  gfvtk2.h  gfvtktypes.h  gfvtktypes2.h  main.cpp  testvec.cpp  util.h  util2.cpp  util2.h
